src/tests/update/snapshots/ciboulette2pg__tests__update__sparse_update_query.snap
---
source: src/tests/update/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_update_0" AS (
  UPDATE
    "public"."peoples"
  SET
    "first-name" = $1,
    "last-name" = $2
  WHERE
    "public"."peoples"."id" = $3 RETURNING *
),
"cte_peoples_data_1" AS (
  SELECT
    "cte_peoples_update_0"."id" :: TEXT AS "id",
    "cte_peoples_update_0"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $4 :: TEXT AS "type",
    JSON_BUILD_OBJECT($5, "cte_peoples_update_0"."first-name") AS "data",
    "cte_peoples_update_0"."favorite_color" AS "rel_favorite_color"
  FROM
    "cte_peoples_update_0"
) (
  SELECT
    "cte_peoples_data_1"."id",
    "cte_peoples_data_1"."type",
    "cte_peoples_data_1"."data",
    "cte_peoples_data_1"."related_type",
    "cte_peoples_data_1"."related_id"
  FROM
    "cte_peoples_data_1"
);
